使用 Colaboratory 建立

--- a/0317_Lab1.ipynb
+++ b/0317_Lab1.ipynb
@@ -42,7 +42,7 @@
         "id": "DbAADq0JDgR2"
       },
       "source": [
-        "# TensorFlow 2.0 介紹"
+        "#王綉孋 TensorFlow 2.0 測試"
       ]
     },
     {
@@ -69,7 +69,7 @@
       "source": [
         "import tensorflow as tf"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -86,7 +86,10 @@
       "metadata": {
         "scrolled": true,
         "id": "AtHWE6H2DgSt",
-        "outputId": "77d20a5a-ae48-4724-f657-e217675deddf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7c61d6f9-69fa-4e93-f1fb-412b563e6999"
       },
       "source": [
         "# 產生一個常數\n",
@@ -96,7 +99,7 @@
         "print(c)\n",
         "print(v)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +124,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ltYiGl-DDgS3",
-        "outputId": "0ab8ec05-edb6-4f8f-ceac-58ba8a7ddcf9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad04a27e-35e1-44af-a99a-91acd7aa3775"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -129,7 +135,7 @@
         "print(x)  # 顯示Tensor 常數資訊，Shape=()表示標量，dtype=int32 表示整數\n",
         "print(\"{} 階Tensor\".format(x.ndim))  # 顯示Tensor 的維度"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,13 +160,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "RSlQ9mBvDgS8",
-        "outputId": "f29d1e60-e2e0-4551-f1a8-e993e3e9e372"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "095eb094-1f87-4d98-fba7-949792bce591"
       },
       "source": [
         "x = tf.constant([1, 2, 3, 4, 5, 6]) \n",
         "print(\"{}階Tensor \".format(x.ndim))    # 顯示Tensor的維度"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,13 +193,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Vq7Fxi1KDgTA",
-        "outputId": "50785613-140e-49cc-83a8-061e2179aec7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b273be1a-6449-40e8-d453-7a0f5e027784"
       },
       "source": [
         "x = tf.constant([[1, 2, 3], [4, 5, 6]])\n",
         "print(\"{}階Tensor \".format(x.ndim))    # 顯示Tensor的維度"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
