使用 Colaboratory 建立

--- a/0317_Lab1.ipynb
+++ b/0317_Lab1.ipynb
@@ -267,7 +267,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EigM7P1RDgTE",
-        "outputId": "7a2976d4-1393-4b53-a872-a079f7e9e246"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cf51ff59-ff03-43b6-8e39-e1a5bcda68de"
       },
       "source": [
         "import numpy as np\n",
@@ -275,7 +278,7 @@
         "\n",
         "print(\"Eager Execution 是否啟動: {}\".format(tf.executing_eagerly()))"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +302,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "olz-MCPEDgTG",
-        "outputId": "8b6c62ce-5cdc-40f8-d0da-0776671fca03"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49bf751f-04ec-4594-e0b7-52f160d6664f"
       },
       "source": [
         "a = tf.constant(3)\n",
@@ -307,7 +313,7 @@
         "print(\"a = {}\".format(a))\n",
         "print(\"b = {}\".format(b))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,13 +338,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "j37vlRozDgTJ",
-        "outputId": "edb457e3-3765-4f03-9a37-eedec37cfd13"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af96b2ca-781a-4060-c5cf-38bb607c969d"
       },
       "source": [
         "print(a)\n",
         "print(b)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +372,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Lv7hUvM0DgTQ",
-        "outputId": "89d52c84-c912-416c-fc5c-3c87c15fd1aa"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c65dad0-067d-4e64-ec62-8e5e4eb89cf3"
       },
       "source": [
         "c = a + b\n",
@@ -371,7 +383,7 @@
         "d = a * b\n",
         "print(\"a * b = {}\".format(d))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +408,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1p-PXMdHDgTU",
-        "outputId": "59b18728-c898-4201-b6f6-aa85731b92a0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4878d0d2-287d-470c-b85e-24452207e625"
       },
       "source": [
         "a = tf.constant([[1., 2.], [3., 4.]], dtype=tf.float32)\n",
@@ -408,7 +423,7 @@
         "d = tf.matmul(a, b)\n",
         "print(\"a * b = \\n{}\".format(d))"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,13 +453,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "G9hW31FpDgTX",
-        "outputId": "d7adc1c9-2436-4df8-8c39-70cc6a86e7e2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6eb3cf96-b5ee-4260-bf47-a34ba74aae7a"
       },
       "source": [
         "print(c)\n",
         "print(\"NumpyArray:\\n {}\".format(c.numpy()))"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +491,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jgZuOzcfDgTY",
-        "outputId": "9ad5ce1b-4107-4f3d-a3bb-6d6dfd20ecbe"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2ac637a6-a218-4301-f815-a04e0f5dd6d4"
       },
       "source": [
         "w = tf.Variable([[1.0]])\n",
@@ -483,7 +504,7 @@
         "grad = tape.gradient(loss, w)\n",
         "print(grad)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +552,7 @@
         "from tensorflow.keras.utils import plot_model\n",
         "from IPython.display import Image"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
