--- a/ML001.ipynb
+++ b/ML001.ipynb
@@ -13,10 +13,170 @@
     {
       "cell_type": "code",
       "source": [
+        "!sudo apt install tesseract-ocr\n",
+        "!pip install pytesseract"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-84634Fo3IjT",
+        "outputId": "3932d9f9-db73-4223-8cf0-1e0806a857e0"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "^C\n",
+            "Traceback (most recent call last):\n",
+            "  File \"<frozen importlib._bootstrap>\", line 983, in _find_and_load\n",
+            "  File \"<frozen importlib._bootstrap>\", line 967, in _find_and_load_unlocked\n",
+            "  File \"<frozen importlib._bootstrap>\", line 677, in _load_unlocked\n",
+            "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+            "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/pip/_internal/index/package_finder.py\", line 32, in <module>\n",
+            "    from pip._internal.req import InstallRequirement\n",
+            "  File \"<frozen importlib._bootstrap>\", line 983, in _find_and_load\n",
+            "  File \"<frozen importlib._bootstrap>\", line 963, in _find_and_load_unlocked\n",
+            "  File \"<frozen importlib._bootstrap>\", line 906, in _find_spec\n",
+            "  File \"<frozen importlib._bootstrap_external>\", line 1280, in find_spec\n",
+            "  File \"<frozen importlib._bootstrap_external>\", line 1252, in _get_spec\n",
+            "  File \"<frozen importlib._bootstrap_external>\", line 1364, in find_spec\n",
+            "  File \"<frozen importlib._bootstrap_external>\", line 81, in _path_stat\n",
+            "KeyboardInterrupt\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/bin/pip3\", line 8, in <module>\n",
+            "    sys.exit(main())\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/pip/_internal/cli/main.py\", line 69, in main\n",
+            "    command = create_command(cmd_name, isolated=(\"--isolated\" in cmd_args))\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/pip/_internal/commands/__init__.py\", line 91, in create_command\n",
+            "    module = importlib.import_module(module_path)\n",
+            "  File \"/usr/lib/python3.7/importlib/__init__.py\", line 127, in import_module\n",
+            "    return _bootstrap._gcd_import(name[level:], package, level)\n",
+            "  File \"<frozen importlib._bootstrap>\", line 1006, in _gcd_import\n",
+            "  File \"<frozen importlib._bootstrap>\", line 983, in _find_and_load\n",
+            "  File \"<frozen importlib._bootstrap>\", line 967, in _find_and_load_unlocked\n",
+            "  File \"<frozen importlib._bootstrap>\", line 677, in _load_unlocked\n",
+            "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+            "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/pip/_internal/commands/install.py\", line 15, in <module>\n",
+            "    from pip._internal.cli.req_command import (\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/pip/_internal/cli/req_command.py\", line 21, in <module>\n",
+            "    from pip._internal.index.package_finder import PackageFinder\n",
+            "  File \"<frozen importlib._bootstrap>\", line 983, in _find_and_load\n",
+            "KeyboardInterrupt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/AlexeyAB/darknet.git\n",
+        "\n",
+        "!sed -i \"s/GPU=0/GPU=1/g\" darknet/Makefile\n",
+        "!sed -i \"s/CUDNN=0/CUDNN=1/g\" darknet/Makefile\n",
+        "!sed -i \"s/CUDNN_HALF=0/CUDNN_HALF=1/g\" darknet/Makefile\n",
+        "!sed -i \"s/OPENCV=0/OPENCV=1/g\" darknet/Makefile\n",
+        "!sed -i \"s/LIBSO=0/LIBSO=1/g\" darknet/Makefile"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IDkYyaiW3UW9",
+        "outputId": "d549e482-88ac-44d0-f1cd-74fcf84ff306"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'darknet'...\n",
+            "remote: Enumerating objects: 15386, done.\u001b[K\n",
+            "remote: Total 15386 (delta 0), reused 0 (delta 0), pack-reused 15386\u001b[K\n",
+            "Receiving objects: 100% (15386/15386), 14.01 MiB | 10.82 MiB/s, done.\n",
+            "Resolving deltas: 100% (10346/10346), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/chiachun2491/NTUST_EdgeAI.git plate_detection"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3W6hj0kM3bs9",
+        "outputId": "514787f1-3950-4d80-a0d2-b0dc74656b6c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'plate_detection'...\n",
+            "remote: Enumerating objects: 142, done.\u001b[K\n",
+            "remote: Counting objects: 100% (142/142), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (132/132), done.\u001b[K\n",
+            "remote: Total 142 (delta 15), reused 126 (delta 8), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (142/142), 7.45 MiB | 18.52 MiB/s, done.\n",
+            "Resolving deltas: 100% (15/15), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "-84634Fo3IjT"
+        "id": "BX-4zDU13i4v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd 'plate_detection/'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BnoSwjkq3o4O",
+        "outputId": "7173175f-46b4-47f5-95a6-91336bee9287"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/plate_detection\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "PsAdsyHq3scr"
       },
       "execution_count": null,
       "outputs": []
@@ -27,7 +187,7 @@
     "colab": {
       "name": "ML001",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgtEjChhG6YlN+7sSNnxmn",
+      "authorship_tag": "ABX9TyPiBVqPhoX2Lr4Jrm94a9GA",
       "include_colab_link": true
     },
     "kernelspec": {
